Initial working weather screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Tweather</string>
     <string name="current_temperature">Current temperature</string>
-    <string name="temperature">%1$f °C / %2$f °F</string>
+    <string name="future_temp">Next 5 days</string>
+
+    <string name="temperature">Temperature: %1$f °C / %2$f °F</string>
+    <string name="wind">Wind: %1$f meter/sec</string>
 </resources>
